Added logo style

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
   <!-- SITE-HEADER -->
   <header class="site-header">
 
-    <div class="site-header-actions">
-      <div class="logo-link">
-        <a href="index.html">
-          <img src="img/logo.svg" alt="Ansormed logo" width="50" height="50"></a>
+    <div class="site-header-actions">    
+        <a class="logo-link" href="#">
+          <img src="img/logo.svg" alt="Ansormed logo" width="50" height="50">
           <p class="header-logo-text">AnsorMed</p>
-        </div>
+          </a>     
         <!-- SITENAV -->
         <nav>
           <ul class="sitenav-list">
